@@ -10,6 +10,9 @@ synaptic (0.62.9) UNRELEASEDunstable; urgency=low
     - updated, thanks to Matej Urbančič
   * take the "Origin" field from the release file into account
     when looking for supported packages
+  * gtk/rgfetchprogress.{cc,h}:
+    - remove the custom progress rendering and replace with
+      stock gtk progress
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 27 Aug 2009 18:27:02 +0200
 
